<resources>
    <string name="app_name">BURGER</string>
    <string name="e_m_a_i_l_a_d_d_r_e_s_s">E M A I L A D D R E S S</string>
    <string name="p_a_s_s_w_o_r_d">P A S S W O R D</string>
    <string name="f_o_r_g_e_t_p_a_s_s_w_p_r_d">F O R G E T P A S S W O R D ?</string>
    <string name="d_o_n_t_h_a_v_e_a_c_c_o_u_n_t">D O N T H A V E A C C O U N T ?</string>
    <string name="s_i_g_n_u_p">S I G N U P</string>
    <string name="l_o_g_i_n">L O G I N</string>
    <string name="enter_your_email">Enter Your Email Here</string>
    <string name="enter_your_password">Enter Your Password Here</string>
    <string name="r_e_p_a_s_s_w">R E - P A S S W</string>
    <string name="f_u_l_l_name">F U L L NAME</string>
    <string name="p_h_o_n_e_n_u_m_b_e_r">P H O N E N U M B E R</string>
    <string name="enter_your_name">Enter Your Full Name Here</string>
    <string name="rewrite_password">Rewrite Your Password Here</string>
    <string name="enter_your_location">Enter Your Location Here</string>
    <string name="enter_your_phone_number">Enter Your Phone Number Here</string>
    <string name="rewrite_password_correct">Rewrite Your Password Correctly</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="reset_my_password">reset my password</string>
    <string name="profile">P R O F I L E</string>
    <string name="burger">B U R G E R</string>
    <string name="snaks">S N A K S</string>
    <string name="locations">L O C A T I O N S</string>
    <string name="orders">O R D E R S</string>
    <string name="check">C H E C K</string>
    <string name="confirm">C O N F I R M</string>
    <string name="noselected">No Items Selected</string>
    <string name="jd"> JD </string>
    <string name="o_r_d_e_r_y_o_u_r_f_a_v_o_u_r_i_t_f_o_o_d_n_o_w">O R D E R Y O U R F A V O U R I T F O O D N O W</string>
    <string name="cheassburger">C H E A S S  B U R G E R</string>
    <string name="bfrburger">BFR BURGER</string>
    <string name="beefburger">BEEF BURGER</string>
    <string name="mashburger">MASH BURGER</string>
    <string name="shawerma">S H A W A R M A</string>
    <string name="hotdog">H O T D O G</string>
    <string name="chrisipy">C H R I S P Y</string>
    <string name="faheta">F A H E T A</string>
    <string name="m_e_a_l">M E A L</string>
    <string name="l_o_c_a_t_i_o_n">L O C A T I O N</string>
    <string name="a_m_m_a_n_a_b_d_o_o_n">A M M A N - A B D O O N</string>
    <string name="s_a_v_e">S A V E</string>
    <string name="l_o_g_o_u_t">L O G O U T</string>
    <string name="o_r_d_e_r_n_o_w">O R D E R N O W !</string>
    <string name="order_confirmed">ORDER CONFIRMED</string>
    <string name="vaildemail">Enter a Valid Email !</string>
    <string name="passwordformat"><![CDATA[Password too weak !\n must contain at least one capital letter, at least one number, at least one spiceal letter(#$@&*/-*+)]]></string>
</resources>