<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="end"
    android:id="@+id/navigation_view"
    android:background="@drawable/menu"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="end"
        android:src="@drawable/filesandfolders" />

    <TextView
        android:layout_marginStart="30dp"
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/profile"
        android:fontFamily="@font/ralewaybold"
        android:textSize="30dp"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_marginStart="30dp"
        android:id="@+id/burger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/burger"
        android:fontFamily="@font/ralewaybold"
        android:textSize="30dp"
        android:textColor="@color/black"/>

    <TextView
        android:layout_marginStart="30dp"
        android:id="@+id/snaks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/snaks"
        android:fontFamily="@font/ralewaybold"
        android:textSize="30dp"
        android:textColor="@color/black"/>

    <TextView
        android:layout_marginStart="30dp"
        android:id="@+id/orders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/orders"
        android:fontFamily="@font/ralewaybold"
        android:textSize="30dp"
        android:textColor="@color/black"/>

    <TextView
        android:layout_marginStart="30dp"
        android:id="@+id/locations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/locations"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold" />

    <TextView
        android:layout_marginStart="30dp"
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/l_o_g_o_u_t"
        android:textColor="@color/orange"
        android:fontFamily="@font/ralewaybold"
        android:textSize="25dp"/>

</LinearLayout>