<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    android:background="@color/orange"
    android:layout_gravity="center"
    android:layout_height="wrap_content">

    <TextView
        android:textColor="@color/black"
        android:fontFamily="@font/ralewaysemibold"
        android:textSize="20dp"
        android:gravity="center"
        android:text="@string/enter_your_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:fontFamily="@font/ralewaysemibold"
        android:textColorHint="@color/white"
        android:layout_marginTop="20dp"
        android:hint="@string/e_m_a_i_l_a_d_d_r_e_s_s"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:text="@string/reset_my_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>