<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".Fragments.MainFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/img"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/iburgerlogo" />

        <LinearLayout
            android:gravity="center"
            android:id="@+id/burger_section"
            android:layout_marginStart="20dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/fastfood"
                android:layout_width="100dp"
                android:layout_height="100dp"/>

            <TextView
                android:gravity="center"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:text="@string/burger"
                android:fontFamily="@font/ralewaybold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:id="@+id/snaks_section"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/chickenbucket"
                android:layout_width="100dp"
                android:layout_height="100dp"/>

            <TextView
                android:gravity="center"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:text="@string/snaks"
                android:fontFamily="@font/ralewaybold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/ralewaysemibold"
            android:gravity="center"
            android:text="@string/o_r_d_e_r_y_o_u_r_f_a_v_o_u_r_i_t_f_o_o_d_n_o_w"
            android:textColor="@color/black" />

    </RelativeLayout>


</FrameLayout>